--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,13 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <exec.mainClass>com.mycompany.sistema.gerenciador.clube.SistemaGerenciadorClube</exec.mainClass>
     </properties>
-
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+            </resource>
+         </resources>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.xerial</groupId>
